--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,64 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Manrope', sans-serif;
     background-color: #F5F5F5;
     width: 100%;
 }
 
-.cont{
+.main_container{
     margin: 0 auto;
     width: 1400px;
     background-color: white;
+
 }
+
+
+
+.navigation {
+    padding-top: 33px;
+}
+
+.logo_link {
+    display: inline-block;
+    margin-left: 125px;
+}
+
+.navigation_container_txt {
+    display: inline-block;
+    padding-left:558.46px;
+}
+
+.nav_link_txt {
+    text-decoration: none; 
+    margin-left: 60px;
+
+    color: #121212;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.54px;
+    text-transform: uppercase;
+
+}
+
+.nav_link_txt:first-child {
+    margin-left: 0px;
+}
+
+.nav_link_txt:hover {
+    text-decoration: underline;
+    color: rgb(159, 172, 203);
+    opacity: 0.5;
+}
+
+
+
+
+
 
 h1 {
     color: #121212;
@@ -22,7 +72,7 @@ h1 {
     margin-right: 319px;
     margin-left: 125px;
 }
-.Htextp {
+.hat_textp {
     color: #FFF;
     font-size: 20px;
     font-style: normal;
@@ -55,14 +105,14 @@ h2 {
     padding-left: 125px;
 }
 
-.Hphoto{
+.hat_photo{
     position: relative;
     margin-left: 125px;
     width: 1150px;
     height: 500px;
     background-image: url(../расходники/наивысшеефото\ 1.png);
 }
-.Htext{
+.hat_text{
     position: absolute;
     left: 40px;
     bottom: 40px;
@@ -93,17 +143,17 @@ h2 {
     font-size: 20px;
 }
 
-.box1_1 {
+.proj-box1_1 {
     margin-left: 125px;
     margin-top: 30px;
  }
 
-.box1_1__img {
+.proj-box1_1-img {
     width: 1150px;
     height: 450px;
 }
 
-.box1_1__h3 {
+.proj-box1_1-h3 {
     margin-top: 15px;
     padding-bottom: 15px;
     color: #121212;
@@ -113,7 +163,7 @@ h2 {
     line-height: normal;
     letter-spacing: -0.9px;
 }
-.box1_1__href {
+.proj-box1_1-href {
     color: var(--accent, #AD1818);
     font-size: 20px;
     font-style: normal;
@@ -123,17 +173,18 @@ h2 {
     text-decoration: none;
  }
 
- .box1_2 {
+ .proj-box1_2 {
     margin-left: 125px;
     margin-top: 90px;
  }
 
- .box1_3 {
+ .proj-box1_3 {
     margin-left: 125px;
     margin-top: 90px;
  }
 
  .all_projects {
+
     margin-left: 125px;
     margin-top: 90px;
     display: block;
@@ -145,6 +196,7 @@ h2 {
     border-radius: 5px;
     border: 1px solid var(--accent, #AD1818);
     cursor: pointer;
+    pointer-events: auto;
 }
 
 .all_projects_txt {
@@ -163,17 +215,20 @@ h2 {
     background-color: #AD1818;
 }
 
-.all_projects:hover .all_projects_txt {
+.all_projects_txt:hover .all_projects_txt {
     color: white;
 }
 
-.blacksection {
-    margin-top: 150px;
+.blacksection_services{
+    width: 100%;
     height: 1844px;
     background-color: #121212;
+    
+    
+
 }
   
-.blacksection_uslugi {
+.blacksection_services__txt {
     margin-bottom: 34px;
     padding-top: 151px;
     color: #FFF;
@@ -186,13 +241,13 @@ h2 {
     text-transform: uppercase;
 }
 
-.blacksection__box2_1__img {
+.services__box2_1__img {
     width: 1150px;
     height: 270px;
     margin-left: 125px;
 }
 
-.blacksection__box2_1__p {
+.services__box2_1__p {
     margin-bottom: 60px;
     margin-top: 15px;
     margin-left: 125px;
@@ -204,6 +259,7 @@ h2 {
     letter-spacing: -0.9px;
 }
 
-.container_black li:last-child .blacksection__box2_1__p {
+.container_black li:last-child .services__box2_1__p {
     margin-bottom: 0px;
 }
+
